src/jemplpl/test/variants.jemp
@parameter: const std::list<std::string> &variants@

@-for(auto var : variants) {-@
    variant @var@ sez: @#variant_#var#(std::string("ok"))@
@-}-@
====
